@@ -1,6 +1,9 @@
 
 Drupal 7.33, xxxx-xx-xx (development version)
 -----------------------
+- Fixed a bug which caused user pictures to be removed from the user object
+  after saving, and resulted in data loss if the user account was subsequently
+  re-saved.
 - Fixed a bug in which field_has_data() did not return TRUE for fields that
   only had data in older entity revisions, leading to loss of the field's data
   when the field configuration was edited.
